# claude-code-langfuse

./: .gitignore  README.md  pyproject.toml
examples/: .env.example
src/claude_code_langfuse_hook/: __init__.py  config.py  hook.py  identity.py  tracer.py  transcript.py
tests/: test_cli.py  test_config.py  test_hook_e2e.py  test_identity.py  test_state.py  test_tracer.py  test_transcript.py
