[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-langfuse-hook"
version = "0.1.1"
description = "Drop-in Claude Code Stop hook that ships per-user, per-project usage traces to Langfuse."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kavak GCC" }]
keywords = ["claude-code", "langfuse", "observability", "tracing", "llm-ops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  # Pin to v3 until the package is reverified against Langfuse v4.
  # See https://github.com/langfuse/langfuse/issues/12603
  "langfuse>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/fawad71/claude-code-langfuse"
Issues = "https://github.com/fawad71/claude-code-langfuse/issues"
Repository = "https://github.com/fawad71/claude-code-langfuse"

[project.scripts]
claude-langfuse = "claude_code_langfuse_hook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
